xapian-bindings (0.9.8-1) unstable; urgency=low

  * New upstream release.
  * debian/rules: Add no-op "binary-indep" target (Closes: #395761).
  * debian/rules: Don't try to build PHP bindings on hurd-i386 (PHP hasn't
    been ported, but Python, Tcl, and Ruby have).
  * debian/rules: Upstream no longer support Python 2.1 bindings so update
    comments regarding the Python versions supported by the sarge backport.
  * debian/control.in,debian/control-php.in: Add "Suggests: xapian-doc" since
    the xapian-core documentation is useful reading for people developing
    using xapian-bindings.
  * debian/rules: Use python-all-dev where we can.

 -- Olly Betts <olly@survex.com>  Sat,  4 Nov 2006 22:02:05 +0000

xapian-bindings (0.9.7-2) unstable; urgency=low

  * debian/control.in,debian/rules: Build dependency on libxapian-dev
    should be versioned (Closes: #392537).
  * debian/rules: Don't include Python 2.1 support in the stable backport
    since SWIG generates bad code for it at present.

 -- Olly Betts <olly@survex.com>  Thu, 12 Oct 2006 14:36:43 +0100

xapian-bindings (0.9.7-1) unstable; urgency=low

  * New upstream release.
  * debian/rules: Fix typo in configure invocation for Tcl so that we only
    build the Tcl bindings in that source tree.
  * debian/rules: Build-Depends on phpN-cli so that we can run "make check".
  * debian/po/: Added newly translated debconf messages for fr, cs, pt, sv
    (Closes: #380341, #382933, #383396, #387533).

 -- Olly Betts <olly@survex.com>  Wed, 11 Oct 2006 19:09:35 +0100

xapian-bindings (0.9.6-5) unstable; urgency=low

  * debian/copyright: Add Java bindings copyrights and licences.
  * debian/rules: Run "make check" on each of the built bindings.  It's a very
    lightweight test but will at least ensure that the basics work.  It also
    serves to check the core library is working - xapian-core's own testsuite
    is probably too slow to justify devoting autobuilder time to.